# configshell-fb

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  Makefile  README  README.md  configshell_fb  configshell_fb.py  pyproject.toml  python-configshell-fb.spec  setup.py
.github/workflows/: publish.yml
configshell/: __init__.py  console.py  log.py  node.py  prefs.py  shell.py
debian/: changelog  configshell-doc.docs  control  copyright  python-configshell-fb-doc.doc-base  python-configshell-fb-docs.doc-base  python-configshell-fb.postinst  python-configshell-fb.preinst  python-configshell.doc-base  python-configshell.docs  python-configshell.install  python-configshell.postinst  python-configshell.prerm  rules  watch
examples/: myshell
fedora/: python-configshell-fb.spec
redhat/: python-configshell.spec.tmpl
rpm/: python-configshell.spec.tmpl
